--- a/index3.html
+++ b/index3.html
@@ -463,36 +463,36 @@
     <div class="container">
       <div class="one">
         <h1 class="one">
-          Hi!👋🏼 <span id="name">Chellamss</span>
+          Hi!👋🏼 <span id="name">Chickooos</span>
           <!-- Ganti ini jadi nama yang ultah -->
         </h1>
         <p class="two" id="greetingText">
-          How soo prettyyy?!
+          How soo prettyyy🥰?!
         </p>
       </div>
 
       <div class="three">
-        <p>It's your birthday!! 🎂</p>
+        <p>It's your birthdayyy!! 🎂</p>
       </div>
 
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            I hope your days are always filled with fun, and may all your little wishes come true, chickooseh.          </p>
-          <p class="fake-btn"> ✨</p>
+            I hope your days are always filled with fun, and may all your little wishes come true,may u always be blessed with good food😂, chickooseh.          </p>
+          <button class="fake-btn">✨</button>
         </div>
       </div>
 
       <div class="five">
-        <p class="idea-1">Heyy you, the one who’s always in my heart.</p>
+        <p class="idea-1">To the one who's put up with me all this time🙃</p>
         <p class="idea-2">
           I just wanna say, <br />
           "Love you moree Chickoos!!!"
         </p>
         <p class="idea-3">
-          Out of all the girls in this world, <br />
+          Out of all people in this world, <br />
           <strong style="padding: 10px;">
-            I only see u as the one who always makes me happy.
+            I only see u as the one who always makes me happy at any point in time.
           </strong>
         </p>
         <p class="idea-4">Because,</p>
@@ -603,7 +603,7 @@
       </div>
 
       <div class="nine">
-        <p>And the last one i want to be with you forever.</p>
+        <p>One last surprise!</p>
         <p id="replay">Click here XD</p>
         <p class="last-smile">💗</p>
       </div>
