--- a/index3.html
+++ b/index3.html
@@ -478,7 +478,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            I hope your days are always filled with fun, and may all your little wishes come true,may u always be blessed with good food😂, chickooseh.          </p>
+            I hope your days are always filled with fun, and may all your little wishes come true,may u always be blessed with good food😂          </p>
           <button class="fake-btn">✨</button>
         </div>
       </div>
@@ -520,7 +520,7 @@
             "Happy Birthday, Chickoos! Wishing you a day as beautiful as you
             are.
             <br />
-            Lots of love and hugs on your special day!"
+            Always stay the cheerful person you are🫂"
           </h5>
         </div>
       </div>
