--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       id="interaksi"
       class="w-3/4 h-64 backdrop-blur border flex flex-col justify-center items-center p-10 mx-auto mt-20 rounded-xl"
     >
-      <h1 class="text-2xl font-extrabold">I have something for youuu heheh </h1>
+      <h1 class="text-2xl font-extrabold">I have something for youuu heheh ;) </h1>
       <img src="/assets/stiker2-removebg-preview.png" class="w-20" alt="" />
       <button
         class="w-40 p-2 bg-black text-white font-bold rounded-sm hover:shadow-xl"
