--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <body>
     <div>
       <h2 class="text-center mt-10 text-3xl font-black">
-        Happy Birtdayy Chickoos!!!
+        😼 Happy Birtdayy Chickoos 😼
       </h2>
     </div>
 
@@ -68,7 +68,8 @@
       id="kotak"
     >
       <h3 class="text-2xl">
-        Haloo Chickoos! I couldnt send you the gift on time but hey! That wont stop me from surprising you🤗
+        Haloo Chickoos! I couldnt send you the gift on time but hey! 
+                  That wont stop me from surprising you🤗
       </h3>
     </div>
 
