--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
       class="w-3/4 backdrop-blur border flex justify-center items center p-10 mx-auto mt-20 rounded-xl"
       id="kotak"
     >
-      <h3 class="text-2xl text-center">
+      <h3 style="text-align: center; font-size: 1.5rem;">
       Haloo Chickoos! I couldnt send you the gift on time but hey! 
       That wont stop me from surprising you 🤗
-       </h3>
+      </h3>
+
     </div>
 
     <div
