--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         class="w-40 p-2 bg-black text-white font-bold rounded-sm hover:shadow-xl"
         onclick="klik()"
       >
-        click chickoos
+        Don't Press🫣
       </button>
     </div>
 
